# chat_squizzer_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  config.py  db.py  pyproject.toml
